--- a/css/style.css
+++ b/css/style.css
@@ -247,13 +247,17 @@ ul.todo li {
 li span i{
   padding: 5px;
 }
-.cus-check:before {
+/* .cus-check:before {
   color: wheat !important;
-}
+} */
 /* .fa-check-circle:before {
   content: "\f058";
   color: wheat;
 } */
+ul.todo#todo li .buttons button{
+  /* display: block; */
+  color: wheat;
+}
 
 ul.todo#todo{
   padding-top: 30px;
@@ -332,6 +336,7 @@ ul.todo#todo li .buttons .complete .far{
 ul.todo#completed li .buttons .complete .fas{
   display: block;
   color: #25b99a;
+  
 }
 
 ul.todo#completed li .buttons .complete .far{
@@ -340,4 +345,5 @@ ul.todo#completed li .buttons .complete .far{
 
 ul.todo#completed span{
   color: #25b99a;
+  font-size: 1.2em;
 }
